[gd_scene load_steps=6 format=3 uid="uid://dxm0iosc3iul8"]

[ext_resource type="Script" path="res://scene/gui/table_options_gui/foreign_key_gui.gd" id="1_kys82"]
[ext_resource type="Theme" uid="uid://gq4jrtos1c4q" path="res://resource/theme/default_options_theme.tres" id="1_pxwq8"]
[ext_resource type="Texture2D" uid="uid://vc6m6cu2c7k1" path="res://asset/image/plus_normal.png" id="2_obi2s"]
[ext_resource type="Texture2D" uid="uid://civbhj7ryxj7i" path="res://asset/image/plus_hover.png" id="3_7la5k"]
[ext_resource type="Texture2D" uid="uid://c131n6ykqilil" path="res://asset/image/more_normal.png" id="3_uvkqr"]

[node name="ForeignKeyGui" type="PanelContainer"]
offset_right = 359.0
offset_bottom = 99.0
theme = ExtResource("1_pxwq8")
theme_type_variation = &"ForeignKeyPanel"
script = ExtResource("1_kys82")

[node name="OptionsMenuButton" type="MenuButton" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(22, 35)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/h_separation = 0
theme_override_constants/outline_size = 0
icon = ExtResource("3_uvkqr")
text_overrun_behavior = 2
clip_text = true
icon_alignment = 1
expand_icon = true
item_count = 1
popup/item_0/text = "Remove"
popup/item_0/id = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TableVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TableLabel" type="Label" parent="MarginContainer/VBoxContainer/TableVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"InputLabel"
text = "Target table"

[node name="TargetTableOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/TableVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RelationshipsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxTitleRelationships" type="HBoxContainer" parent="MarginContainer/VBoxContainer/RelationshipsVBox"]
layout_mode = 2

[node name="RelationshipsLabel" type="Label" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxTitleRelationships"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TitleLabel"
text = "Relationships"

[node name="AddRelationshipButton" type="TextureButton" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxTitleRelationships"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("2_obi2s")
texture_pressed = ExtResource("3_7la5k")
texture_hover = ExtResource("3_7la5k")
stretch_mode = 3

[node name="HBoxRelationshipsContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/RelationshipsVBox"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="OwnColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxRelationshipsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="OwnColumnLabel" type="Label" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxRelationshipsContainer/OwnColumn"]
layout_mode = 2
theme_type_variation = &"InputLabel"
text = "Own column"

[node name="OwnColumnOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxRelationshipsContainer/OwnColumn"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="TargetColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxRelationshipsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TargetLabel" type="Label" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxRelationshipsContainer/TargetColumn"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"InputLabel"
text = "Target column"

[node name="TargetColumnOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/RelationshipsVBox/HBoxRelationshipsContainer/TargetColumn"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
